Fixed styling issue in Safari where box class was not centered.

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ p, a{ font-family: 'Source Sans Pro', sans-serif; }
   background-color:#b3ffd9;
   transition: background-color 0.8s ease-in;
  }
-.box { max-width:50vw; min-height:25vh; }
+.box { max-width:50vw; min-height:25vh; margin:0 auto;}
 
 
 a#author { float:right; text-decoration: none; font-weight:bold; color:#4d94ff; }
